--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body class="flex items-center bg-cover bg-no-repeat w-screen bg-slate-300" id="mybgimage">
     <div class="container mx-auto my-8 flex gap-4 items-center ">
 
-        <div class="bg-gray-600 opacity-95 flex flex-col  h-96 rounded-3xl justify-evenly items-center gap-4 p-2">
+        <div class="bg-gray-600 opacity-95 flex flex-col  h-96 rounded-3xl justify-evenly items-center gap-8 p-2">
             <span class="fa-regular fa-circle-play fa-2xl" style="color: #ffffff;"></span>
             <span class="fa-solid fa-table-cells-large fa-2xl" style="color: #ffffff;"></span>
             <span class="fa-solid fa-tv fa-2xl" style="color: #ffffff;"></span>
@@ -34,25 +34,56 @@
 
                 <div class="flex flex-col gap-7">
                     <h1>New Trailers &#128293;</h1>
-                    <div class="vid-card rounded-3xl bg-center bg-cover bg-no-repeat flex items-end" style="background-image: url(images/shadow-and-bone-season-2-social-9.jpg);">
-                        <div class="rounded-b-3xl bg-blue-200 w-full h-1/6 bg-opacity-60 backdrop-blur-sm"></div>
+                    <div class="vid-card rounded-2xl bg-center bg-cover bg-no-repeat flex items-end" style="background-image: url(images/shadow-and-bone-season-2-social-9.jpg);">
+                        <div class="rounded-b-2xl bg-gray-400 w-full h-1/5 bg-opacity-60 backdrop-blur-sm"></div>
                     </div>
 
-                    <div class="vid-card rounded-3xl bg-center bg-cover bg-no-repeat flex items-end" style="background-image: url(images/nightagent.jpg);">
-                        <div class="rounded-b-3xl bg-slate-300 w-full h-1/6 bg-opacity-70 backdrop-blur-sm"></div>
+                    <div class="vid-card rounded-2xl bg-center bg-cover bg-no-repeat flex items-end" style="background-image: url(images/nightagent.jpg);">
+                        <div class="rounded-b-2xl bg-gray-400 w-full h-1/5 bg-opacity-60 backdrop-blur-sm"></div>
                     </div>
 
-                    <div class="vid-card rounded-3xl bg-center bg-cover bg-no-repeat flex items-end" style="background-image: url(images/witcher.jpg);">
-                        <div class="rounded-b-3xl bg-blue-200 w-full h-1/6 bg-opacity-60 backdrop-blur-sm flex justify-end">
+                    <div class="vid-card rounded-2xl bg-center bg-cover bg-no-repeat flex items-end" style="background-image: url(images/witcher.jpeg);">
+                        <div class="rounded-b-2xl bg-gray-400 w-full h-1/5 bg-opacity-60 backdrop-blur-sm flex justify-end">
                             
                         </div>
                     </div>
                 </div>
             </section> <!--sidebar/nav container-->
     
-            <div>
-                <div></div>
-                <div></div>
+            <section class="p-4 grow-2 flex flex-col content-evenly">
+                <section class="flex justify-between items-center gap-8 w-full">
+                    <div class="text-3xl font-thin">
+                        <span>&lt;</span>
+                        <span>&gt;</span>
+                    </div>
+                    <div class="grow-2">
+                        <input class="rounded-2xl p-1 w-1/2" type="text" name="Search" id="Search" placeholder="Search...">
+                    </div>
+                    <div class="flex items-center">
+                        <div class="bg-slate-300 w-10 h-10 rounded-3xl flex justify-center items-center">
+                            <span class="fa-regular fa-bell fa-lg"></span>
+                        </div>
+                        <div class="bg-slate-300 rounded-2xl h-12 grow flex gap-3 p-2 items-center">
+                            <div class="rounded-3xl flex justify-center items-center border-red-600 border-4"><img src="images/sam.jpg" class="w-10 h-10 bg-center rounded-3xl" alt="Profile Picture" ></div>
+                            <p><span>Samantha G.</span><span>@Samantha</span></p>
+                        </div>
+                    </div>
+                </section >
+                <div class="bg-cover bg-no-repeat h-2/5 w-full rounded-2xl" id="peaky">
+                    <img src="" alt="Peaky Blinders Text">
+                    <nav>
+                        <ul class="flex">
+                            <li><a href="#">2013</a></li>
+                            <li>&bull;</li>
+                            <li><a href="#">Drama</a></li>
+                            <li>&bull;</li>
+                            <li><a href="#">5 Seasons</a></li>
+                        </ul>
+                    </nav>
+                    <div class="text-white">
+                        <button>Watch</button>
+                    </div>
+                </div>
 
                 <div>
                 <section>
@@ -70,7 +101,7 @@
                             <div></div>
                         </section>
                     </div>
-                </div><!--content container-->
+                </section><!--content container-->
 
             </div><!--main contaier-->
 
