move to desktop

--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
         
         <div class="flex grow-2 h-1/4 w-2/3 bg-opacity-60 backdrop-blur-lg border border-cust-color rounded-3xl">
 
-            <section class="flex flex-col gap-8  bg-opacity-60 backdrop-blur-3xl rounded-l-3xl p-8">
-                <img src="images/netflix-logo.png" alt="Netflix logo" class="w-52">
-                <nav class="text-white">
+            <section class="flex flex-col gap-8 grow bg-opacity-60 w-1/12 backdrop-blur-3xl rounded-l-3xl pl-8 py-8">
+                <img src="images/netflix-logo.png" alt="Netflix logo" class="w-7/12">
+                <nav class="text-white w-8/12">
                     <ul class="flex flex-col gap-3">
                         <li><a href="#"><span class="fa-solid fa-circle-play fa-lg cust-red"></span> Browse</a></li>
                         <li><a href="#"><span class="fa-regular fa-heart fa-lg" style="color: #cdcecf;"></span> Wishlist</a></li>
@@ -32,8 +32,8 @@
                     </ul>
                 </nav>
 
-                <div class="flex flex-col gap-7">
-                    <h1>New Trailers &#128293;</h1>
+                <div class="flex flex-col gap-7  w-8/12 ">
+                    <h1 class="text-white">New Trailers &#128293;</h1>
                     <div class="vid-card rounded-2xl bg-center bg-cover bg-no-repeat flex items-end" style="background-image: url(images/shadow-and-bone-season-2-social-9.jpg);">
                         <div class="rounded-b-2xl bg-gray-400 w-full h-1/5 bg-opacity-60 backdrop-blur-sm"></div>
                     </div>
@@ -70,9 +70,9 @@
                     </div>
                 </section >
 
-                <div class="bg-cover bg-no-repeat h-2/5 w-full rounded-2xl p-4" id="peaky"><!--peakyblinders thing-->
-                    <img src="" alt="Peaky Blinders Text">
-                    <nav>
+                <div class="bg-cover bg-no-repeat h-2/5 w-full rounded-2xl p-4 flex flex-col" id="peaky"><!--peakyblinders thing-->
+                    <img src="" alt="Peaky Blinders Text" class="grow-2">
+                    <nav class="my-4">
                         <ul class="flex justify-start gap-2 text-white">
                             <li><a href="#">2013</a></li>
                             <li>&bull;</li>
@@ -94,19 +94,19 @@
 
                 <div class="flex flex-col justify-between gap-4">
                     <h3 class="text-white">Popcorn Mania</h3>
-                    <section class="flex justify-between">
-                        <div class="w-64 h-40 bg-cover rounded-xl shadow shadow-red-400 flex items-end" id="brook"></div>
-                        <div class="w-64 h-40 bg-cover rounded-xl shadow shadow-red-400 flex items-end bg-center" id="readyPlay"></div>
-                        <div class="w-64 h-40 bg-cover rounded-xl shadow shadow-red-400 flex items-end" id="moneyHeist"></div>
-                        <div class="w-64 h-40 bg-cover rounded-xl shadow shadow-red-400 flex items-end" id="ashEvil"></div>
+                    <section class="flex justify-between w-full">
+                        <div class="cust-w-vid h-2/5 bg-cover bg-center rounded-xl shadow shadow-red-400 flex items-end" id="brook"></div>
+                        <div class="cust-w-vid h-2/5 bg-cover rounded-xl shadow shadow-red-400 flex items-end bg-center" id="readyPlay"></div>
+                        <div class="cust-w-vid h-2/5 bg-cover bg-center rounded-xl shadow shadow-red-400 flex items-end" id="moneyHeist"></div>
+                        <div class="cust-w-vid h-2/5 bg-cover rounded-xl shadow shadow-red-400 flex items-end" id="ashEvil"></div>
                     </section>
 
                     <h3 class="text-white">Continue Watching</h3>
-                    <section class="flex justify-between">
-                        <div class="w-64 h-36 bg-cover rounded-xl shadow shadow-red-400 flex items-end" id="redNot"></div>
-                        <div class="w-64 h-36 bg-cover rounded-xl shadow shadow-red-400 flex items-end" id="extraction"></div>
-                        <div class="w-64 h-36 bg-cover rounded-xl shadow shadow-red-400 flex items-end" id="adamProj"></div>
-                        <div class="w-64 h-36 bg-cover rounded-xl shadow shadow-red-400 flex items-end" id="oldGuard"></div>
+                    <section class="flex justify-between w-full">
+                        <div class="cust-w-vid h-2/5 bg-cover rounded-xl shadow shadow-red-400 flex items-end" id="redNot"></div>
+                        <div class="cust-w-vid h-2/5 bg-cover rounded-xl shadow shadow-red-400 flex items-end" id="extraction"></div>
+                        <div class="cust-w-vid h-2/5 bg-cover rounded-xl shadow shadow-red-400 flex items-end" id="adamProj"></div>
+                        <div class="cust-w-vid h-2/5 bg-cover rounded-xl shadow shadow-red-400 flex items-end" id="oldGuard"></div>
                     </section>
                 </div>
             </section><!--content container-->
