--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
                     <div class="cust-trailer-wh rounded-2xl bg-center bg-cover bg-no-repeat flex items-end" style="background-image: url(images/shadow-and-bone-season-2-social-9.jpg);">
                         <div class="rounded-b-2xl bg-gray-400 w-full h-1/5 bg-opacity-60 backdrop-blur-sm flex justify-end items-center pr-3.5">
                             <h3 class="grow-2 text-white p-1 md:text-xs md:p-2">Shadow and Bone</h3>
-                            <div class="rounded-2xl w-6 h-6 backdrop-blur-3xl bg-gray-800 opacity-60 flex justify-center items-center">
-                                <span class="fa-solid fa-play fa-xs" style="color: #ffffff;"></span>
+                            <div class="rounded-2xl w-6 h-6 backdrop-blur-3xl bg-gray-800 opacity-60 flex justify-center items-center md:w-4 md:h-4">
+                                <span class="fa-solid fa-play text-xs md:cust-icon-s " style="color: #ffffff;"></span>
                             </div>
                         </div>
                     </div><!--card-->
@@ -47,8 +47,8 @@
                     <div class="cust-trailer-wh rounded-2xl bg-center bg-cover bg-no-repeat flex items-end" style="background-image: url(images/nightagent.jpg);">
                         <div class="rounded-b-2xl bg-gray-400 w-full h-1/5 bg-opacity-60 backdrop-blur-sm flex justify-end items-center pr-3.5">
                             <h3 class="grow-2 text-white p-1 md:text-xs md:p-2">The Night Agent</h3>
-                            <div class="rounded-2xl w-6 h-6 backdrop-blur-3xl bg-slate-500 opacity-60 flex justify-center items-center">
-                                <span class="fa-solid fa-play fa-xs" style="color: #ffffff;"></span>
+                            <div class="rounded-2xl w-6 h-6 backdrop-blur-3xl bg-slate-500 opacity-60 flex justify-center items-center md:w-4 md:h-4">
+                                <span class="fa-solid fa-play text-xs md:cust-icon-s " style="color: #ffffff;"></span>
                             </div>
                         </div>
                     </div><!--card-->
@@ -56,8 +56,8 @@
                     <div class="cust-trailer-wh rounded-2xl bg-center bg-cover bg-no-repeat flex items-end h" style="background-image: url(images/witcher.jpeg);">
                         <div class="rounded-b-2xl bg-gray-400 w-full h-1/5 bg-opacity-60 backdrop-blur-sm flex justify-end items-center pr-3.5">
                             <h3 class="grow-2 text-white p-1 md:text-xs md:p-2">The Witcher</h3>
-                            <div class="rounded-2xl w-6 h-6 backdrop-blur-3xl bg-slate-500 opacity-60 flex justify-center items-center">
-                                <span class="fa-solid fa-play fa-xs" style="color: #ffffff;"></span>
+                            <div class="rounded-2xl w-6 h-6 backdrop-blur-3xl bg-white/5 opacity-60 flex justify-center items-center md:w-4 md:h-4">
+                                <span class="fa-solid fa-play text-xs md:cust-icon-s " style="color: #ffffff;"></span>
                             </div>
                         </div>
                     </div><!--card-->
@@ -168,32 +168,45 @@
                     <section class="flex justify-between w-full h-3/4">
 
                         <div class="cust-w-vid h-full bg-gradient-to-r from-transparent to-black bg-cover rounded-xl shadow-md shadow-red-400 flex flex-col items-start justify-end" id="redNot">
-                            <h3 class="text-white px-3 py-0 md:px-2 md:text-sm">Red Notice</h3>
-                            <div class="w-full h-2/6 rounded-b-xl cust-progBar flex justify-center items-center p-3 pt-0 md:p-2 md:pt">
-                                <progress class="bg-white w-full shadow-xl shadow-black cust-progBar h-1/3 rounded-2xl"  value="19" max="100"></progress>
+                            <div class="rounded-2xl w-6 h-6 backdrop-blur-3xl bg-white/5 opacity-60 flex justify-center items-center place-self-center md:w-4 md:h-4">
+                                <span class="fa-solid fa-play text-xs md:cust-icon-s" style="color: #ffffff;"></span>
                             </div>
-                        </div>
+                            <div class="w-full h-3/6 rounded-b-xl cust-progBar flex flex-col justify-center items-start p-3 pt-0 md:p-2 md:pt">
+                                <h3 class="text-white md:text-sm">Red Notice</h3>
+                                <progress class="bg-white w-full shadow-xl shadow-black cust-progBar h-1/3 rounded-2xl" value="19" max="100"></progress>
+                            </div>
+                        </div>                        
 
                         <div class="cust-w-vid h-full bg-cover rounded-xl shadow-md shadow-red-400 flex flex-col items-start justify-end" id="extraction">
-                            <h3 class="text-white px-3 py-0 md:px-2 md:text-sm">Extraction</h3>
-                            <div class="w-full h-2/6 rounded-b-xl cust-progBar flex justify-center items-center p-3 pt-0 md:p-2 md:pt">
-                                <progress class="bg-white w-full shadow-xl shadow-black cust-progBar h-1/3 rounded-2xl"  value="87" max="100"></progress>
+                            <div class="rounded-2xl w-6 h-6 backdrop-blur-3xl bg-white/5 opacity-60 flex justify-center items-center place-self-center md:w-4 md:h-4">
+                                <span class="fa-solid fa-play text-xs md:cust-icon-s" style="color: #ffffff;"></span>
                             </div>
-                        </div>
+                            <div class="w-full h-3/6 rounded-b-xl cust-progBar flex flex-col justify-center items-start p-3 pt-0 md:p-2 md:pt">
+                                <h3 class="text-white md:text-sm">Extraction</h3>
+                                <progress class="bg-white w-full shadow-xl shadow-black cust-progBar h-1/3 rounded-2xl" value="87" max="100"></progress>
+                            </div>
+                        </div>                       
 
-                        <div class="cust-w-vid h-full bg-cover rounded-xl shadow-md shadow-red-400 flex flex-col items-start justify-end" id="adamProj">
-                            <h3 class="text-white px-3 py-0 md:px-2 md:text-sm">The Adam Project</h3>
-                            <div class="w-full h-2/6 rounded-b-xl cust-progBar flex justify-center items-center p-3 pt-0 md:p-2 md:pt">
-                                <progress class="bg-white w-full shadow-xl shadow-black cust-progBar h-1/3 rounded-2xl"  value="30" max="100"></progress>
-                            </div>
+                         <div class="cust-w-vid h-full bg-cover rounded-xl shadow-md shadow-red-400 flex flex-col items-start justify-end" id="adamProj">
+                                <div class="rounded-2xl w-6 h-6 backdrop-blur-3xl bg-white/5 opacity-60 flex justify-center items-center place-self-center md:w-4 md:h-4">
+                                   <span class="fa-solid fa-play text-xs md:cust-icon-s " style="color: #ffffff;"></span>
+                                </div>
+                                <div class="w-full h-3/6 rounded-b-xl cust-progBar flex flex-col justify-center items-start p-3 pt-0 md:p-2 md:pt">
+                                <h3 class="text-white md:text-sm">The Adam Project</h3>
+                                <progress class="bg-white w-full shadow-xl shadow-black cust-progBar h-1/3 rounded-2xl" value="30" max="100"></progress>
+                            </div>                            
                         </div>
 
                         <div class="cust-w-vid h-full bg-cover rounded-xl shadow-md shadow-red-400 flex flex-col items-start justify-end" id="oldGuard">
-                            <h3 class="text-white px-3 py-0 md:px-2 md:text-sm">The Old Gaurd</h3>
-                            <div class="w-full h-2/6 rounded-b-xl cust-progBar flex justify-center items-center p-3 pt-0 md:p-2 md:pt">
-                                <progress class="bg-white w-full shadow-xl shadow-black cust-progBar h-1/3 rounded-2xl"  value="40" max="100"></progress>
+                            <div class="rounded-2xl w-6 h-6 backdrop-blur-3xl bg-white/5 opacity-60 flex justify-center items-center place-self-center md:w-4 md:h-4">
+                                <span class="fa-solid fa-play text-xs md:cust-icon-s" style="color: #ffffff;"></span>
+                            </div>
+                            <div class="w-full h-3/6 rounded-b-xl cust-progBar flex flex-col justify-center items-start p-3 pt-0 md:p-2 md:pt">
+                                <h3 class="text-white md:text-sm">The Old Guard</h3>
+                                <progress class="bg-white w-full shadow-xl shadow-black cust-progBar h-1/3 rounded-2xl" value="40" max="100"></progress>
                             </div>
                         </div>
+                        
                     </section>
                 </div>
             </section><!--content container-->
